// A protocol cheatsheet, similar to [1].
//
//                                  Proxy
//   Client    Batcher   Server     Server
//      | ------> |         |         |      ClientRequest
//      |         | ------> |         |      ClientRequestBatch
//      |         |         | ------> |      ClientReplyBatch
//      | <-------^---------^-------- |      ClientReply
//
// [1]: https://ndpsoftware.com/git-cheatsheet.html
syntax = "proto2";

package frankenpaxos.batchedunreplicated;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "frankenpaxos.batchedunreplicated"
  flat_package: true
};

// Helper messages. ////////////////////////////////////////////////////////////
message Command {
  required bytes client_address = 1;
  required int32 command_id = 2;
  required bytes command = 3;
}

message Result {
  required bytes client_address = 1;
  required int32 command_id = 2;
  required bytes result = 3;
}

// Protocol messages. //////////////////////////////////////////////////////////
message ClientRequest {
  required Command command = 1;
}

message ClientRequestBatch {
  repeated Command command = 1;
}

message ClientReplyBatch {
  repeated Result result = 1;
}


message ClientReply {
  required Result result = 1;
}

// Inbound messages. ///////////////////////////////////////////////////////////
message ClientInbound {
  oneof request {
    ClientReply client_reply = 1;
  }
}

message BatcherInbound {
  oneof request {
    ClientRequest client_request = 1;
  }
}

message ServerInbound {
  oneof request {
    ClientRequestBatch client_request_batch = 1;
  }
}

message ProxyServerInbound {
  oneof request {
    ClientReplyBatch client_reply_batch = 1;
  }
}

